# siewnik_zdalnie

./: cicrkj  esp32.code-workspace  sdkconfig
avr_code/nowy_sterownik/: main.c  nowy_sterownik.cproj
avr_code/nowy_sterownik/Debug/: Makefile  main.d  makedep.mk  nowy_sterownik.elf  nowy_sterownik.hex  nowy_sterownik.lss  nowy_sterownik.map  nowy_sterownik.srec
avr_siewnik/nowy_sterownik/: main.c  nowy_sterownik.cproj
components/backend/: CMakeLists.txt  cmd_client.c  cmd_client.h  cmd_server.c  cmd_server.h  parse_cmd.c  parse_cmd.h  telnet.c  telnet.h  wifidrv.c  wifidrv.h
components/config/: CMakeLists.txt  config.c  config.h  configCmd.h
components/drv/: CMakeLists.txt  atmega_communication.c  atmega_communication.h  battery.c  but.c  but.h  buzzer.c  buzzer.h  error_siewnik.c  keepalive.c  keepalive.h  measure.h  motor.c  pcf8574.c  pcf8574.h  ringBuff.h  servo.c  sleep.c  vibro.c
components/menu/: CMakeLists.txt  menu.c  menu.h  menu_drv.c  menu_drv.h  menu_main.c  menu_param.c  ssd1306_tests.c  ssdFigure.c  ssdFigure.h
main/: CMakeLists.txt  atmega_communication.c  atmega_communication.h  battery.c  battery.h  but.c  but.h  buzzer.c  buzzer.h  cmd_client.c  cmd_client.h  cmd_server.c  cmd_server.h  cmd_short.c  cmd_short.h  cmd_utils.c  cmd_utils.h  communication.c  communication.h  config.c  config.h  configCmd.h  console.c  console.h  console_telnet.c  console_telnet.h  error_siewnik.c  error_siewnik.h  fast_add.c  fast_add.h  hello_world_main.c  keepalive.c  keepalive.h  lwip.h  main.c  measure.c  measure.h  menu.c  menu.h  menu_param.c  (+28 more)
(+34 files in other folders)
